--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dev-inspector": "^1.1.1",
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.0.4",
+    "showdown": "^1.9.1",
     "umi": "^3.4.1",
     "umi-request": "^1.0.8"
   },
