--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "@ant-design/pro-form": "^1.3.0",
     "@ant-design/pro-layout": "^6.9.0",
     "@ant-design/pro-table": "^2.17.0",
-    "@monaco-editor/react": "^4.1.3",
     "@umijs/route-utils": "^1.0.33",
     "antd": "^4.15.0",
     "classnames": "^2.2.6",
@@ -61,6 +60,7 @@
     "react-dev-inspector": "^1.1.1",
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.0.4",
+    "react-syntax-highlighter": "^15.4.3",
     "showdown": "^1.9.1",
     "umi": "^3.4.1",
     "umi-request": "^1.0.8"
